tahini/tests/assert_outside.tah
var checkvar = false;
assertion: checkvar, "Check should be true!";

// RuntimeError: assertion contract failed (Check should be true!)
// [at line 2 in assert_outside.tah]
